syntax = "proto3";

package well_known;

option go_package = "./well_known;well_known";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/any.proto";

message Holder {
    google.protobuf.Empty empty = 1;
    google.protobuf.Timestamp timestamp = 2;
    google.protobuf.Duration duration = 3;
    google.protobuf.FieldMask field_mask = 4;
    google.protobuf.BoolValue bool_value = 5;
    google.protobuf.Int32Value int32_value = 6;
    google.protobuf.Int64Value int64_value = 7;
    google.protobuf.UInt32Value uint32_value = 8;
    google.protobuf.UInt64Value uint64_value = 9;
    google.protobuf.FloatValue float_value = 10;
    google.protobuf.DoubleValue double_value = 11;
    google.protobuf.StringValue string_value = 12;
    google.protobuf.BytesValue bytes_value = 13;
    google.protobuf.Struct struct = 14;
    google.protobuf.ListValue list_value = 15;
    google.protobuf.Value value = 16;
    google.protobuf.Any any = 17;
}

message OneOfHolder {
    oneof various {
        google.protobuf.Empty empty = 1;
        google.protobuf.Timestamp timestamp = 2;
        google.protobuf.Duration duration = 3;
        google.protobuf.FieldMask field_mask = 4;
        google.protobuf.BoolValue bool_value = 5;
        google.protobuf.Int32Value int32_value = 6;
        google.protobuf.Int64Value int64_value = 7;
        google.protobuf.UInt32Value uint32_value = 8;
        google.protobuf.UInt64Value uint64_value = 9;
        google.protobuf.FloatValue float_value = 10;
        google.protobuf.DoubleValue double_value = 11;
        google.protobuf.StringValue string_value = 12;
        google.protobuf.BytesValue bytes_value = 13;
        google.protobuf.Struct struct = 14;
        google.protobuf.ListValue list_value = 15;
        google.protobuf.Value value = 16;
        google.protobuf.Any any = 17;
    }
}